--- a/OzalGanatra_041053393.ipynb
+++ b/OzalGanatra_041053393.ipynb
@@ -419,7 +419,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Ans 5: Dimension of the dataset is nothing but the rows and columns of the dataframes. For example, from the above output we have 1000 rows and 9 columns"
@@ -462,7 +462,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Ans 6: Size of the dataframe is 9000 (1000 rows * 9 columns)"
@@ -573,7 +573,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Ans 8: No, there are no missing values in the pima dataframe."
@@ -801,7 +801,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Ans 10: The distribution of blodpressure is Bimodal distribution because it has 2 highest peak one at 0.005 and other at 0.030."
@@ -845,7 +845,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Ans 11: BMI for the person having the highest Glucose : 42.9"
@@ -898,7 +898,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Ans 12:\n",
@@ -952,7 +952,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Ans 13: 449 women's Glucose level is above the mean level of Glucose"
@@ -996,7 +996,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Ans 14:\n",
@@ -1011,8 +1011,7 @@
     "\n",
     "Glucose and SkinThickness: There is no relationship among each other.\n",
     "Glucose and DiabetesPedigreeFunction: There is no relationship among each other.\n",
-    "SkinThickness and DiabetesPedigreeFunction: There is no relationship among each other.\n",
-    "\n"
+    "SkinThickness and DiabetesPedigreeFunction: There is no relationship among each other."
    ]
   },
   {
@@ -1064,7 +1063,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Ans 15: From the sactter plot, we can depicts that the Glucose and Insulin are positively correlated. If the patient's glucose level is high then the doses of insulin is also increases."
@@ -1111,7 +1110,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Ans 16:There are many outliers in the Age variable."
