--- a/OzalGanatra_041053393.ipynb
+++ b/OzalGanatra_041053393.ipynb
@@ -804,7 +804,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans 10: The distribution of blodpressure is Bimodal distribution because it has 2 highest peak one at 0.005 and other at 0.030."
+    "Ans 10: The distribution of bloodpressure is Bimodal distribution because it has 2 highest peak one at 0.005 and other at 0.030."
    ]
   },
   {
@@ -1066,7 +1066,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ans 15: From the sactter plot, we can depicts that the Glucose and Insulin are positively correlated. If the patient's glucose level is high then the doses of insulin is also increases."
+    "Ans 15: From the scatter plot, we can depict that the Glucose and Insulin are positively correlated. If the patient's glucose level is high then the doses of insulin is also increases."
    ]
   },
   {
